[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibro-nomogram"
version = "0.1.0"
description = "Matplotlib projection class for frequency-domain vibration analysis"
readme = "README.rst"
license = "MIT"
license-files = [
    "LICENSE.md",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]
authors = [
  {name = "Andreas Martin"},
]
classifiers = [
    "Framework :: Matplotlib",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/a-ma72/vibro-nomogram"

[tool.setuptools.packages.find]
exclude = ["examples*", "tests*"]